# RetentiveNetwork

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml  test-package.yml
examples/: example_training.py
retentive_network/: __init__.py  exceptions.py
retentive_network/layers/: __init__.py  feed_forward.py  group_norm.py  layer_norm.py  multi_scale_retention.py  projection.py  retention.py  swish_gate.py
retentive_network/models/: __init__.py  clm.py  network.py
tests/: test_clm.py  test_feed_forward.py  test_group_norm.py  test_layer_norm.py  test_multi_scale_retention.py  test_network.py  test_retention.py  test_swish_gate.py
